Add new Component PointsCloud

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-cube></app-cube>
+<div>
+
+    <app-cube></app-cube>
+    <app-points-cloud></app-points-cloud>
+</div>
